cluster/apps/default/whoami/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "20m"
              memory: "20Mi"
