cluster/apps/default/whoami/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hidden
  namespace: default
  labels:
    app: whoami

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hidden.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
